--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        tools:overrideLibrary="com.android.car.ui"
         tools:targetApi="31">
+        <activity
+            android:name=".directions"
+            android:exported="false" />
+        <activity
+            android:name=".cartpurchase"
+            android:exported="false" />
         <activity
             android:name=".ImageViewActivity"
             android:exported="false" />
