--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         tools:overrideLibrary="com.android.car.ui"
         tools:targetApi="31">
         <activity
+            android:name=".productView"
+            android:exported="false" />
+        <activity
             android:name=".directions"
             android:exported="false" />
         <activity
